kube-prometheus/ingress/prometheus-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus-dev.talkedu.cn
    http:
      paths:      
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: web
  - host: grafana-dev.talkedu.cn
    http:
      paths:      
      - path: /
        backend:
          serviceName: grafana
          servicePort: http
  - host: alertmanager-dev.talkedu.cn
    http:
      paths:      
      - path: /
        backend:
          serviceName: alertmanager-main
          servicePort: web
